// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WorkflowState nav list-item-list for Vulnerability Management CLUSTER has trimmed stacks 1`] = `
[
  "CLUSTER CLUSTER-0 CLUSTER_CVE",
  "CLUSTER CLUSTER-0 DEPLOYMENT",
  "CLUSTER CLUSTER-0 DEPLOYMENT DEPLOYMENT-2 IMAGE",
  "CLUSTER CLUSTER-0 DEPLOYMENT DEPLOYMENT-2 IMAGE IMAGE-4 IMAGE_COMPONENT",
  "CLUSTER CLUSTER-0 DEPLOYMENT DEPLOYMENT-2 IMAGE IMAGE-4 IMAGE_COMPONENT IMAGE_COMPONENT-6 IMAGE_CVE",
  "CLUSTER CLUSTER-0 DEPLOYMENT DEPLOYMENT-2 IMAGE IMAGE-4 IMAGE_CVE",
  "CLUSTER CLUSTER-0 DEPLOYMENT DEPLOYMENT-2 IMAGE IMAGE-4 IMAGE_CVE IMAGE_CVE-6 IMAGE_COMPONENT",
  "CLUSTER CLUSTER-0 DEPLOYMENT DEPLOYMENT-2 IMAGE_COMPONENT",
  "CLUSTER CLUSTER-0 DEPLOYMENT DEPLOYMENT-2 IMAGE_COMPONENT IMAGE_COMPONENT-4 IMAGE",
  "IMAGE-6 IMAGE_CVE",
  "CLUSTER CLUSTER-0 DEPLOYMENT DEPLOYMENT-2 IMAGE_COMPONENT IMAGE_COMPONENT-4 IMAGE_CVE",
  "IMAGE_CVE-6 IMAGE",
  "CLUSTER CLUSTER-0 DEPLOYMENT DEPLOYMENT-2 IMAGE_CVE",
  "IMAGE_CVE-4 IMAGE",
  "CLUSTER CLUSTER-0 DEPLOYMENT DEPLOYMENT-2 IMAGE_CVE IMAGE_CVE-4 IMAGE_COMPONENT",
  "IMAGE_COMPONENT-6 IMAGE",
  "CLUSTER CLUSTER-0 DEPLOYMENT DEPLOYMENT-2 NAMESPACE",
  "NAMESPACE-4 IMAGE",
  "NAMESPACE-4 IMAGE_COMPONENT",
  "NAMESPACE-4 IMAGE_CVE",
  "CLUSTER CLUSTER-0 IMAGE",
  "CLUSTER CLUSTER-0 IMAGE IMAGE-2 DEPLOYMENT",
  "DEPLOYMENT-4 IMAGE_COMPONENT",
  "DEPLOYMENT-4 IMAGE_CVE",
  "DEPLOYMENT-4 NAMESPACE",
  "CLUSTER CLUSTER-0 IMAGE IMAGE-2 IMAGE_COMPONENT",
  "IMAGE_COMPONENT-4 DEPLOYMENT",
  "CLUSTER CLUSTER-0 IMAGE IMAGE-2 IMAGE_COMPONENT IMAGE_COMPONENT-4 IMAGE_CVE",
  "IMAGE_CVE-6 DEPLOYMENT",
  "CLUSTER CLUSTER-0 IMAGE IMAGE-2 IMAGE_CVE",
  "IMAGE_CVE-4 DEPLOYMENT",
  "CLUSTER CLUSTER-0 IMAGE IMAGE-2 IMAGE_CVE IMAGE_CVE-4 IMAGE_COMPONENT",
  "IMAGE_COMPONENT-6 DEPLOYMENT",
  "CLUSTER CLUSTER-0 IMAGE_COMPONENT",
  "IMAGE_COMPONENT-2 DEPLOYMENT",
  "CLUSTER CLUSTER-0 IMAGE_COMPONENT IMAGE_COMPONENT-2 IMAGE",
  "IMAGE-4 DEPLOYMENT",
  "IMAGE-4 IMAGE_CVE",
  "CLUSTER CLUSTER-0 IMAGE_COMPONENT IMAGE_COMPONENT-2 IMAGE_CVE",
  "IMAGE_CVE-4 DEPLOYMENT",
  "IMAGE_CVE-4 IMAGE",
  "CLUSTER CLUSTER-0 IMAGE_CVE",
  "IMAGE_CVE-2 DEPLOYMENT",
  "IMAGE_CVE-2 IMAGE",
  "CLUSTER CLUSTER-0 IMAGE_CVE IMAGE_CVE-2 IMAGE_COMPONENT",
  "IMAGE_COMPONENT-4 DEPLOYMENT",
  "IMAGE_COMPONENT-4 IMAGE",
  "CLUSTER CLUSTER-0 NAMESPACE",
  "CLUSTER CLUSTER-0 NAMESPACE NAMESPACE-2 DEPLOYMENT",
  "CLUSTER CLUSTER-0 NAMESPACE NAMESPACE-2 DEPLOYMENT DEPLOYMENT-4 IMAGE",
  "CLUSTER CLUSTER-0 NAMESPACE NAMESPACE-2 DEPLOYMENT DEPLOYMENT-4 IMAGE IMAGE-6 IMAGE_COMPONENT",
  "CLUSTER CLUSTER-0 NAMESPACE NAMESPACE-2 DEPLOYMENT DEPLOYMENT-4 IMAGE IMAGE-6 IMAGE_COMPONENT IMAGE_COMPONENT-8 IMAGE_CVE",
  "CLUSTER CLUSTER-0 NAMESPACE NAMESPACE-2 DEPLOYMENT DEPLOYMENT-4 IMAGE IMAGE-6 IMAGE_CVE",
  "CLUSTER CLUSTER-0 NAMESPACE NAMESPACE-2 DEPLOYMENT DEPLOYMENT-4 IMAGE IMAGE-6 IMAGE_CVE IMAGE_CVE-8 IMAGE_COMPONENT",
  "CLUSTER CLUSTER-0 NAMESPACE NAMESPACE-2 DEPLOYMENT DEPLOYMENT-4 IMAGE_COMPONENT",
  "CLUSTER CLUSTER-0 NAMESPACE NAMESPACE-2 DEPLOYMENT DEPLOYMENT-4 IMAGE_COMPONENT IMAGE_COMPONENT-6 IMAGE",
  "IMAGE-8 IMAGE_CVE",
  "CLUSTER CLUSTER-0 NAMESPACE NAMESPACE-2 DEPLOYMENT DEPLOYMENT-4 IMAGE_COMPONENT IMAGE_COMPONENT-6 IMAGE_CVE",
  "IMAGE_CVE-8 IMAGE",
  "CLUSTER CLUSTER-0 NAMESPACE NAMESPACE-2 DEPLOYMENT DEPLOYMENT-4 IMAGE_CVE",
  "IMAGE_CVE-6 IMAGE",
  "CLUSTER CLUSTER-0 NAMESPACE NAMESPACE-2 DEPLOYMENT DEPLOYMENT-4 IMAGE_CVE IMAGE_CVE-6 IMAGE_COMPONENT",
  "IMAGE_COMPONENT-8 IMAGE",
  "CLUSTER CLUSTER-0 NAMESPACE NAMESPACE-2 IMAGE",
  "CLUSTER CLUSTER-0 NAMESPACE NAMESPACE-2 IMAGE IMAGE-4 DEPLOYMENT",
  "DEPLOYMENT-6 IMAGE_COMPONENT",
  "DEPLOYMENT-6 IMAGE_CVE",
  "CLUSTER CLUSTER-0 NAMESPACE NAMESPACE-2 IMAGE IMAGE-4 IMAGE_COMPONENT",
  "IMAGE_COMPONENT-6 DEPLOYMENT",
  "CLUSTER CLUSTER-0 NAMESPACE NAMESPACE-2 IMAGE IMAGE-4 IMAGE_COMPONENT IMAGE_COMPONENT-6 IMAGE_CVE",
  "IMAGE_CVE-8 DEPLOYMENT",
  "CLUSTER CLUSTER-0 NAMESPACE NAMESPACE-2 IMAGE IMAGE-4 IMAGE_CVE",
  "IMAGE_CVE-6 DEPLOYMENT",
  "CLUSTER CLUSTER-0 NAMESPACE NAMESPACE-2 IMAGE IMAGE-4 IMAGE_CVE IMAGE_CVE-6 IMAGE_COMPONENT",
  "IMAGE_COMPONENT-8 DEPLOYMENT",
  "CLUSTER CLUSTER-0 NAMESPACE NAMESPACE-2 IMAGE_COMPONENT",
  "IMAGE_COMPONENT-4 DEPLOYMENT",
  "CLUSTER CLUSTER-0 NAMESPACE NAMESPACE-2 IMAGE_COMPONENT IMAGE_COMPONENT-4 IMAGE",
  "IMAGE-6 DEPLOYMENT",
  "IMAGE-6 IMAGE_CVE",
  "CLUSTER CLUSTER-0 NAMESPACE NAMESPACE-2 IMAGE_COMPONENT IMAGE_COMPONENT-4 IMAGE_CVE",
  "IMAGE_CVE-6 DEPLOYMENT",
  "IMAGE_CVE-6 IMAGE",
  "CLUSTER CLUSTER-0 NAMESPACE NAMESPACE-2 IMAGE_CVE",
  "IMAGE_CVE-4 DEPLOYMENT",
  "IMAGE_CVE-4 IMAGE",
  "CLUSTER CLUSTER-0 NAMESPACE NAMESPACE-2 IMAGE_CVE IMAGE_CVE-4 IMAGE_COMPONENT",
  "IMAGE_COMPONENT-6 DEPLOYMENT",
  "IMAGE_COMPONENT-6 IMAGE",
  "CLUSTER CLUSTER-0 NODE",
  "CLUSTER CLUSTER-0 NODE NODE-2 NODE_COMPONENT",
  "CLUSTER CLUSTER-0 NODE NODE-2 NODE_COMPONENT NODE_COMPONENT-4 NODE_CVE",
  "CLUSTER CLUSTER-0 NODE NODE-2 NODE_CVE",
  "CLUSTER CLUSTER-0 NODE NODE-2 NODE_CVE NODE_CVE-4 NODE_COMPONENT",
  "CLUSTER CLUSTER-0 NODE_COMPONENT",
  "CLUSTER CLUSTER-0 NODE_COMPONENT NODE_COMPONENT-2 NODE",
  "NODE-4 NODE_CVE",
  "CLUSTER CLUSTER-0 NODE_COMPONENT NODE_COMPONENT-2 NODE_CVE",
  "NODE_CVE-4 NODE",
  "CLUSTER CLUSTER-0 NODE_CVE",
  "NODE_CVE-2 NODE",
  "CLUSTER CLUSTER-0 NODE_CVE NODE_CVE-2 NODE_COMPONENT",
  "NODE_COMPONENT-4 NODE",
]
`;

exports[`WorkflowState nav list-item-list for Vulnerability Management CLUSTER_CVE has trimmed stacks 1`] = `
[
  "CLUSTER_CVE CLUSTER_CVE-0 CLUSTER",
  "CLUSTER-2 DEPLOYMENT",
  "CLUSTER-2 IMAGE",
  "CLUSTER-2 IMAGE_COMPONENT",
  "CLUSTER-2 IMAGE_CVE",
  "CLUSTER-2 NAMESPACE",
  "CLUSTER-2 NODE",
  "CLUSTER-2 NODE_COMPONENT",
  "CLUSTER-2 NODE_CVE",
]
`;

exports[`WorkflowState nav list-item-list for Vulnerability Management DEPLOYMENT has trimmed stacks 1`] = `
[
  "DEPLOYMENT DEPLOYMENT-0 CLUSTER",
  "CLUSTER-2 CLUSTER_CVE",
  "CLUSTER-2 IMAGE",
  "CLUSTER-2 IMAGE_COMPONENT",
  "CLUSTER-2 IMAGE_CVE",
  "CLUSTER-2 NAMESPACE",
  "CLUSTER-2 NODE",
  "CLUSTER-2 NODE_COMPONENT",
  "CLUSTER-2 NODE_CVE",
  "DEPLOYMENT DEPLOYMENT-0 IMAGE",
  "DEPLOYMENT DEPLOYMENT-0 IMAGE IMAGE-2 IMAGE_COMPONENT",
  "DEPLOYMENT DEPLOYMENT-0 IMAGE IMAGE-2 IMAGE_COMPONENT IMAGE_COMPONENT-4 IMAGE_CVE",
  "DEPLOYMENT DEPLOYMENT-0 IMAGE IMAGE-2 IMAGE_CVE",
  "DEPLOYMENT DEPLOYMENT-0 IMAGE IMAGE-2 IMAGE_CVE IMAGE_CVE-4 IMAGE_COMPONENT",
  "DEPLOYMENT DEPLOYMENT-0 IMAGE_COMPONENT",
  "DEPLOYMENT DEPLOYMENT-0 IMAGE_COMPONENT IMAGE_COMPONENT-2 IMAGE",
  "IMAGE-4 IMAGE_CVE",
  "DEPLOYMENT DEPLOYMENT-0 IMAGE_COMPONENT IMAGE_COMPONENT-2 IMAGE_CVE",
  "IMAGE_CVE-4 IMAGE",
  "DEPLOYMENT DEPLOYMENT-0 IMAGE_CVE",
  "IMAGE_CVE-2 IMAGE",
  "DEPLOYMENT DEPLOYMENT-0 IMAGE_CVE IMAGE_CVE-2 IMAGE_COMPONENT",
  "IMAGE_COMPONENT-4 IMAGE",
  "DEPLOYMENT DEPLOYMENT-0 NAMESPACE",
  "NAMESPACE-2 CLUSTER",
  "NAMESPACE-2 IMAGE",
  "NAMESPACE-2 IMAGE_COMPONENT",
  "NAMESPACE-2 IMAGE_CVE",
]
`;

exports[`WorkflowState nav list-item-list for Vulnerability Management IMAGE has trimmed stacks 1`] = `
[
  "IMAGE IMAGE-0 DEPLOYMENT",
  "DEPLOYMENT-2 CLUSTER",
  "DEPLOYMENT-2 IMAGE_COMPONENT",
  "DEPLOYMENT-2 IMAGE_CVE",
  "DEPLOYMENT-2 NAMESPACE",
  "IMAGE IMAGE-0 IMAGE_COMPONENT",
  "IMAGE_COMPONENT-2 DEPLOYMENT",
  "IMAGE IMAGE-0 IMAGE_COMPONENT IMAGE_COMPONENT-2 IMAGE_CVE",
  "IMAGE_CVE-4 DEPLOYMENT",
  "IMAGE IMAGE-0 IMAGE_CVE",
  "IMAGE_CVE-2 DEPLOYMENT",
  "IMAGE IMAGE-0 IMAGE_CVE IMAGE_CVE-2 IMAGE_COMPONENT",
  "IMAGE_COMPONENT-4 DEPLOYMENT",
]
`;

exports[`WorkflowState nav list-item-list for Vulnerability Management IMAGE_COMPONENT has trimmed stacks 1`] = `
[
  "IMAGE_COMPONENT IMAGE_COMPONENT-0 DEPLOYMENT",
  "DEPLOYMENT-2 CLUSTER",
  "DEPLOYMENT-2 IMAGE",
  "DEPLOYMENT-2 IMAGE_CVE",
  "DEPLOYMENT-2 NAMESPACE",
  "IMAGE_COMPONENT IMAGE_COMPONENT-0 IMAGE",
  "IMAGE-2 DEPLOYMENT",
  "IMAGE-2 IMAGE_CVE",
  "IMAGE_COMPONENT IMAGE_COMPONENT-0 IMAGE_CVE",
  "IMAGE_CVE-2 DEPLOYMENT",
  "IMAGE_CVE-2 IMAGE",
]
`;

exports[`WorkflowState nav list-item-list for Vulnerability Management IMAGE_CVE has trimmed stacks 1`] = `
[
  "IMAGE_CVE IMAGE_CVE-0 DEPLOYMENT",
  "DEPLOYMENT-2 CLUSTER",
  "DEPLOYMENT-2 IMAGE",
  "DEPLOYMENT-2 IMAGE_COMPONENT",
  "DEPLOYMENT-2 NAMESPACE",
  "IMAGE_CVE IMAGE_CVE-0 IMAGE",
  "IMAGE-2 DEPLOYMENT",
  "IMAGE-2 IMAGE_COMPONENT",
  "IMAGE_CVE IMAGE_CVE-0 IMAGE_COMPONENT",
  "IMAGE_COMPONENT-2 DEPLOYMENT",
  "IMAGE_COMPONENT-2 IMAGE",
]
`;

exports[`WorkflowState nav list-item-list for Vulnerability Management NAMESPACE has trimmed stacks 1`] = `
[
  "NAMESPACE NAMESPACE-0 CLUSTER",
  "CLUSTER-2 CLUSTER_CVE",
  "CLUSTER-2 DEPLOYMENT",
  "CLUSTER-2 IMAGE",
  "CLUSTER-2 IMAGE_COMPONENT",
  "CLUSTER-2 IMAGE_CVE",
  "CLUSTER-2 NODE",
  "CLUSTER-2 NODE_COMPONENT",
  "CLUSTER-2 NODE_CVE",
  "NAMESPACE NAMESPACE-0 DEPLOYMENT",
  "NAMESPACE NAMESPACE-0 DEPLOYMENT DEPLOYMENT-2 CLUSTER",
  "CLUSTER-4 CLUSTER_CVE",
  "CLUSTER-4 IMAGE",
  "CLUSTER-4 IMAGE_COMPONENT",
  "CLUSTER-4 IMAGE_CVE",
  "CLUSTER-4 NODE",
  "CLUSTER-4 NODE_COMPONENT",
  "CLUSTER-4 NODE_CVE",
  "NAMESPACE NAMESPACE-0 DEPLOYMENT DEPLOYMENT-2 IMAGE",
  "NAMESPACE NAMESPACE-0 DEPLOYMENT DEPLOYMENT-2 IMAGE IMAGE-4 IMAGE_COMPONENT",
  "NAMESPACE NAMESPACE-0 DEPLOYMENT DEPLOYMENT-2 IMAGE IMAGE-4 IMAGE_COMPONENT IMAGE_COMPONENT-6 IMAGE_CVE",
  "NAMESPACE NAMESPACE-0 DEPLOYMENT DEPLOYMENT-2 IMAGE IMAGE-4 IMAGE_CVE",
  "NAMESPACE NAMESPACE-0 DEPLOYMENT DEPLOYMENT-2 IMAGE IMAGE-4 IMAGE_CVE IMAGE_CVE-6 IMAGE_COMPONENT",
  "NAMESPACE NAMESPACE-0 DEPLOYMENT DEPLOYMENT-2 IMAGE_COMPONENT",
  "NAMESPACE NAMESPACE-0 DEPLOYMENT DEPLOYMENT-2 IMAGE_COMPONENT IMAGE_COMPONENT-4 IMAGE",
  "IMAGE-6 IMAGE_CVE",
  "NAMESPACE NAMESPACE-0 DEPLOYMENT DEPLOYMENT-2 IMAGE_COMPONENT IMAGE_COMPONENT-4 IMAGE_CVE",
  "IMAGE_CVE-6 IMAGE",
  "NAMESPACE NAMESPACE-0 DEPLOYMENT DEPLOYMENT-2 IMAGE_CVE",
  "IMAGE_CVE-4 IMAGE",
  "NAMESPACE NAMESPACE-0 DEPLOYMENT DEPLOYMENT-2 IMAGE_CVE IMAGE_CVE-4 IMAGE_COMPONENT",
  "IMAGE_COMPONENT-6 IMAGE",
  "NAMESPACE NAMESPACE-0 IMAGE",
  "NAMESPACE NAMESPACE-0 IMAGE IMAGE-2 DEPLOYMENT",
  "DEPLOYMENT-4 CLUSTER",
  "DEPLOYMENT-4 IMAGE_COMPONENT",
  "DEPLOYMENT-4 IMAGE_CVE",
  "NAMESPACE NAMESPACE-0 IMAGE IMAGE-2 IMAGE_COMPONENT",
  "IMAGE_COMPONENT-4 DEPLOYMENT",
  "NAMESPACE NAMESPACE-0 IMAGE IMAGE-2 IMAGE_COMPONENT IMAGE_COMPONENT-4 IMAGE_CVE",
  "IMAGE_CVE-6 DEPLOYMENT",
  "NAMESPACE NAMESPACE-0 IMAGE IMAGE-2 IMAGE_CVE",
  "IMAGE_CVE-4 DEPLOYMENT",
  "NAMESPACE NAMESPACE-0 IMAGE IMAGE-2 IMAGE_CVE IMAGE_CVE-4 IMAGE_COMPONENT",
  "IMAGE_COMPONENT-6 DEPLOYMENT",
  "NAMESPACE NAMESPACE-0 IMAGE_COMPONENT",
  "IMAGE_COMPONENT-2 DEPLOYMENT",
  "NAMESPACE NAMESPACE-0 IMAGE_COMPONENT IMAGE_COMPONENT-2 IMAGE",
  "IMAGE-4 DEPLOYMENT",
  "IMAGE-4 IMAGE_CVE",
  "NAMESPACE NAMESPACE-0 IMAGE_COMPONENT IMAGE_COMPONENT-2 IMAGE_CVE",
  "IMAGE_CVE-4 DEPLOYMENT",
  "IMAGE_CVE-4 IMAGE",
  "NAMESPACE NAMESPACE-0 IMAGE_CVE",
  "IMAGE_CVE-2 DEPLOYMENT",
  "IMAGE_CVE-2 IMAGE",
  "NAMESPACE NAMESPACE-0 IMAGE_CVE IMAGE_CVE-2 IMAGE_COMPONENT",
  "IMAGE_COMPONENT-4 DEPLOYMENT",
  "IMAGE_COMPONENT-4 IMAGE",
]
`;

exports[`WorkflowState nav list-item-list for Vulnerability Management NODE has trimmed stacks 1`] = `
[
  "NODE NODE-0 CLUSTER",
  "CLUSTER-2 CLUSTER_CVE",
  "CLUSTER-2 DEPLOYMENT",
  "CLUSTER-2 IMAGE",
  "CLUSTER-2 IMAGE_COMPONENT",
  "CLUSTER-2 IMAGE_CVE",
  "CLUSTER-2 NAMESPACE",
  "CLUSTER-2 NODE_COMPONENT",
  "CLUSTER-2 NODE_CVE",
  "NODE NODE-0 NODE_COMPONENT",
  "NODE NODE-0 NODE_COMPONENT NODE_COMPONENT-2 NODE_CVE",
  "NODE NODE-0 NODE_CVE",
  "NODE NODE-0 NODE_CVE NODE_CVE-2 NODE_COMPONENT",
]
`;

exports[`WorkflowState nav list-item-list for Vulnerability Management NODE_COMPONENT has trimmed stacks 1`] = `
[
  "NODE_COMPONENT NODE_COMPONENT-0 NODE",
  "NODE-2 CLUSTER",
  "NODE-2 NODE_CVE",
  "NODE_COMPONENT NODE_COMPONENT-0 NODE_CVE",
  "NODE_CVE-2 NODE",
]
`;

exports[`WorkflowState nav list-item-list for Vulnerability Management NODE_CVE has trimmed stacks 1`] = `
[
  "NODE_CVE NODE_CVE-0 NODE",
  "NODE-2 CLUSTER",
  "NODE-2 NODE_COMPONENT",
  "NODE_CVE NODE_CVE-0 NODE_COMPONENT",
  "NODE_COMPONENT-2 NODE",
]
`;
